@@ -23,6 +23,7 @@ Build-Depends: debhelper (>= 8),
                libtimedate-perl,
                liburi-perl,
                libwww-perl,
+               lsb-release,
                perl,
                po4a (>= 0.40),
                pylint,
