@@ -1,6 +1,10 @@
 devscripts (2.11.10) UNRELEASED; urgency=low
 
-  * debchange: Query name for stable-backport from distro-info.
+  * debchange:
+    - Query name for stable-backport from distro-info.
+    - On Ubuntu always default to targeting the release that it's run from,
+      not the current devel release, since its primary use on stable releases
+      will be for preparing PPA uploads. (LP: #1001068)
 
  -- Benjamin Drung <bdrung@debian.org>  Sun, 17 Jun 2012 23:33:41 +0200
 
